# rsomics-boxcox

./: Cargo.toml  README.md
benches/: boxcox.rs
src/: cli.rs  lib.rs  ndtri.rs  normmax.rs  optimize.rs  pearson.rs  sum.rs  transform.rs
tests/: compat.rs
tests/golden/: exp.tsv  gamma.tsv  golden.json  lognorm.tsv
