[package]
name = "rsomics-boxcox"
version = "0.1.0"
description = "Box-Cox power transform, log-likelihood, and MLE/Pearson optimal lambda — value-exact to scipy.stats.boxcox"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-boxcox"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["statistics", "box-cox", "scipy", "power-transform", "bioinformatics"]
readme = "README.md"

[[bin]]
name = "rsomics-boxcox"
path = "src/main.rs"

[lib]
name = "rsomics_boxcox"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"
ryu = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "boxcox"
harness = false
